--- a/기모띠.html
+++ b/기모띠.html
@@ -8,7 +8,7 @@
 <span class="blink">유키ToTo</span></i></h1><br><br>
 <img src="토토사이트-윈윈-안전놀이터-토리그.jpg"width="1000"height="500">
 <video autoplay controls width="200"height="200">
-  <source src="C:\Users\USER\Desktop\FUCKING\2022-04-25_Untitled.mp4">
+  <source src="2022-04-25_Untitled.mp4">
   </video>
 <ul><ol type="1">
 <li><a href="test.html" title="ㄹㅇ지리는 어시온빵댕이">목록1</a></li>
